--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,61 @@
-Flask
-Flask-RESTful
-Flask-JWT
-Flask-SQLAlchemy
-uwsgi
+aniso8601==7.0.0
+arrow==0.14.2
+asn1crypto==0.24.0
+astroid==2.2.5
+asyncpg==0.18.3
+bcrypt==3.1.7
+cachetools==3.1.1
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+configparser==3.7.4
+cryptography==2.7
+dropbox==9.4.0
+Flask==1.1.1
+Flask-JWT==0.3.2
+Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.0
+google-api-python-client==1.7.9
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+gunicorn==19.9.0
+httpie==1.0.2
+httplib2==0.13.0
+idna==2.8
+isodate==0.6.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jmespath==0.9.4
+lazy-object-proxy==1.4.2
+lxml==4.3.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+numpy==1.16.4
+pandas==0.24.2
+paramiko==2.6.0
+pep8==1.7.1
+psycopg2-binary==2.8.3
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycparser==2.19
+pydash==4.7.5
+Pygments==2.4.2
+PyJWT==1.4.2
+pylint==2.3.1
+PyNaCl==1.3.0
+pysftp==0.2.9
+python-dateutil==2.8.0
+pytz==2019.1
+requests==2.22.0
+rsa==4.0
+six==1.12.0
+SQLAlchemy==1.3.8
+typed-ast==1.4.0
+unicodecsv==0.14.1
+uritemplate==3.0.0
+urllib3==1.25.3
+Werkzeug==0.15.5
+wrapt==1.11.2
+xlrd==1.2.0
